Update BookRepository.java
Synchronized Repository